# nrf54l15_vpr_example

./: .gitignore  README.md  build_and_flash.sh  rust-toolchain.toml
app-core/: Cargo.toml  build.rs  memory.x
app-core/.cargo/: config.toml
app-core/src/: main.rs
flpr-core/: Cargo.toml  memory.x
flpr-core/src/: main.rs
nrf54l15-flpr-pac/: Cargo.toml  README.md  device.x  nrf54l15_flpr.svd
nrf54l15-flpr-pac/src/: global_aar00_ns.rs  global_ccm00_ns.rs  global_clock_ns.rs  global_comp_ns.rs  global_cracen_s.rs  global_ctrlap_ns.rs  global_dppic00_ns.rs  global_ecb00_ns.rs  global_egu10_ns.rs  global_ficr_ns.rs  global_glitchdet_s.rs  global_gpiote20_ns.rs  global_grtc_ns.rs  global_i2s20_ns.rs  global_kmu_s.rs  global_lpcomp_ns.rs  global_mpc00_s.rs  global_nfct_ns.rs  global_p2_ns.rs  global_pdm20_ns.rs  global_power_ns.rs  global_ppib00_ns.rs  global_pwm20_ns.rs  global_qdec20_ns.rs  global_radio_ns.rs  global_regulators_ns.rs  global_reset_ns.rs  global_rramc_s.rs  global_rtc10_ns.rs  global_saadc_ns.rs  global_spim00_ns.rs  global_spis00_ns.rs  global_spu00_s.rs  global_tad_ns.rs  global_tampc_s.rs  global_temp_ns.rs  global_timer00_ns.rs  global_twim20_ns.rs  global_twis20_ns.rs  global_uarte00_ns.rs  (+5 more)
nrf54l15-flpr-pac/src/global_aar00_ns/: errorstatus.rs  events_end.rs  events_error.rs  intenclr.rs  intenset.rs  maxresolved.rs  out.rs  publish_error.rs  publish_notresolved.rs  publish_resolved.rs
nrf54l15-flpr-pac/src/global_ccm00_ns/: adatamask.rs  errorstatus.rs  events_end.rs  events_error.rs  in_.rs  intenclr.rs  intenset.rs  macstatus.rs  mode.rs  nonce.rs  out.rs  publish_end.rs  rateoverride.rs  subscribe_rateoverride.rs  tasks_start.rs
nrf54l15-flpr-pac/src/global_clock_ns/: events_done.rs  events_lfclkstarted.rs  events_pllstarted.rs  events_xostarted.rs  events_xotuned.rs  events_xotuneerror.rs  events_xotunefailed.rs  inten.rs  intenclr.rs  intenset.rs  intpend.rs  lfclk.rs  pll.rs  publish_done.rs  publish_lfclkstarted.rs  publish_pllstarted.rs  publish_xostarted.rs  publish_xotuned.rs  publish_xotuneerror.rs  publish_xotunefailed.rs  subscribe_cal.rs  subscribe_lfclkstart.rs  subscribe_lfclkstop.rs  subscribe_pllstart.rs  subscribe_pllstop.rs  subscribe_xostart.rs  subscribe_xostop.rs  subscribe_xotune.rs  subscribe_xotuneabort.rs  tasks_cal.rs  tasks_lfclkstart.rs  tasks_lfclkstop.rs  tasks_pllstart.rs  tasks_pllstop.rs  tasks_xostart.rs  tasks_xostop.rs  tasks_xotune.rs  tasks_xotuneabort.rs  xo.rs
nrf54l15-flpr-pac/src/global_comp_ns/: hyst.rs  isource.rs  psel.rs  publish_cross.rs  publish_down.rs  publish_ready.rs  refsel.rs  subscribe_sample.rs  subscribe_start.rs  tasks_sample.rs  th.rs
nrf54l15-flpr-pac/src/global_cracen_s/: enable.rs  events_cryptomaster.rs  events_pkeikg.rs  events_rng.rs  inten.rs  intenclr.rs  intenset.rs  intpend.rs  protectedramlock.rs  seed.rs  seedlock.rs  seedvalid.rs
nrf54l15-flpr-pac/src/global_cracencore_s/: cryptmstrdma.rs  cryptmstrhw.rs  ikg.rs  pk.rs  rngcontrol.rs
nrf54l15-flpr-pac/src/global_ctrlap_ns/: eraseprotect.rs  events_rxready.rs  events_txdone.rs  inten.rs  intenclr.rs  intenset.rs  intpend.rs  mailbox.rs  reset.rs
nrf54l15-flpr-pac/src/global_dppic00_ns/: chen.rs  chenclr.rs  chenset.rs  chg.rs  subscribe_chg.rs
nrf54l15-flpr-pac/src/global_ecb00_ns/: errorstatus.rs  events_end.rs  events_error.rs  in_.rs  intenclr.rs  intenset.rs  key.rs  out.rs  publish_end.rs  subscribe_start.rs  tasks_start.rs  tasks_stop.rs
nrf54l15-flpr-pac/src/global_egu10_ns/: publish_triggered.rs  subscribe_trigger.rs
nrf54l15-flpr-pac/src/global_ficr_ns/: er.rs  info.rs  ir.rs  nfc.rs  trimcnf.rs
nrf54l15-flpr-pac/src/global_glitchdet_s/: config.rs
nrf54l15-flpr-pac/src/global_gpiote20_ns/: config.rs  events_in.rs  events_port.rs  intenclr0.rs  intenclr1.rs  intenset0.rs  intenset1.rs  publish_in.rs  publish_port.rs  subscribe_clr.rs  subscribe_out.rs  (+1 more)
(+847 files in other folders)
