[package]
name = "rust-moonlight"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.3"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
embassy-executor = { git = "https://github.com/embassy-rs/embassy/", rev = "b71696c8f54edba664e9bfe77a1d86d09d88f52c", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy/", rev = "b71696c8f54edba664e9bfe77a1d86d09d88f52c", features = [
    "defmt",
    "nrf54l15-app-s",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
    "time",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy/", rev = "b71696c8f54edba664e9bfe77a1d86d09d88f52c", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
#nrf54l15-app-pac = { version = "0.12.2", path = "../nrf54l15-app-pac", features = [
#    "rt",
#] }
panic-probe = { version = "0.3.2", features = ["print-defmt"] }

[patch.crates-io]
# Include fix for number of interrupts, see https://github.com/rust-embedded/cortex-m/pull/555
cortex-m-rt = { git = "https://github.com/rust-embedded/cortex-m", rev = "47921b51f8b960344fcfa1255a50a0d19efcde6d" }

[profile.release]
debug = 2
