[package]
name = "flpr-core"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { version = "0.7.0", path = "../../embassy/embassy-executor", features = [
#    "defmt",
    "task-arena-size-32768",
    "arch-riscv32",
    "executor-thread",
] }
embassy-nrf = { version = "0.3.0", path = "../../embassy/embassy-nrf", features = [
#    "defmt",
    "nrf54l15-flpr-s",
] }
panic-halt = "0.2.0"
riscv = { version = "0.12.1", features = ["critical-section-single-hart"] }
riscv-rt = { version = "0.13.0", features = ["single-hart"] }

[patch.crates-io]
# Patch needed to support RV32E
riscv-rt = { git = "https://github.com/rust-embedded/riscv", rev = "fe6da179b437f23545a5db13ead28dc9855523a4" }
riscv = { git = "https://github.com/rust-embedded/riscv", rev = "fe6da179b437f23545a5db13ead28dc9855523a4" }
