[package]
name = "nrf54l15-flpr-pac"
version = "0.1.0"
edition = "2021"

[dependencies]
critical-section = { version = "1.0", optional = true }
riscv = "0.12.1"
riscv-rt = { version = "0.13.0", optional = true }
vcell = "0.1.0"

[features]
rt = ["riscv-rt"]

[lints.rust]
# Temporary, needs to be fixed in svd2rust
"mismatched_lifetime_syntaxes" = "allow"
